Animations overlaping bug solved

--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,15 @@
 #pet-container {
   height: 15rem;
+  background-size: contain;
   display: flex;    
   align-items: center;
 }
 #pet {
+  height: 82px;
+  width: 82px;
   position: relative;
+  left: 50%;
+  top: 25%;
   transform: scaleX(-1);
 }
 
